# mlda_robotics_workshop3

robot_dataset/: robot_dataset.yaml
robot_dataset/result/: events.out.tfevents.1633272270.dl3090-02.4001367.0  opt.yaml  results.csv
robot_dataset/train/labels/: target_robot_0.txt  target_robot_1.txt  target_robot_10.txt  target_robot_11.txt  target_robot_12.txt  target_robot_13.txt  target_robot_14.txt  target_robot_15.txt  target_robot_16.txt  target_robot_17.txt  target_robot_18.txt  target_robot_19.txt  target_robot_2.txt  target_robot_20.txt  target_robot_21.txt  target_robot_22.txt  target_robot_23.txt  target_robot_24.txt  target_robot_25.txt  target_robot_26.txt  target_robot_27.txt  target_robot_28.txt  target_robot_29.txt  target_robot_3.txt  target_robot_30.txt  target_robot_31.txt  target_robot_32.txt  target_robot_33.txt  (+8 more)
turtlebot3_controller/config/: config.yaml
turtlebot3_controller/rviz/: turtlebot_pursuit.rviz
turtlebot3_controller/src/: Turtlebot3Controller.cpp  turtlebot3_controller_node.cpp
turtlebot3_controller/worlds/: multi_pillar.world
turtlebot3_detection/: CMakeLists.txt  package.xml  setup.py
turtlebot3_detection/launch/: turtlebot3_detection.launch
turtlebot3_detection/nodes/: inference  node_to_jpg
turtlebot3_detection/src/turtlebot3_detection/: .gitignore  __init__.py
turtlebot3_detection/src/turtlebot3_detection/tools/: clean_dataset.py  json_to_yolov5.py  voc_to_json.py
turtlebot3_detection/src/turtlebot3_detection/yolov5/: model_inference.py
turtlebot3_detection/src/turtlebot3_detection/yolov5/utils/: plots.py
(+21 files in other folders)
